Moved things around

--- a/vscode.conf.symlink/settings.json
+++ b/vscode.conf.symlink/settings.json
@@ -11,6 +11,8 @@
   "javascript.updateImportsOnFileMove.enabled": "always",
   "explorer.confirmDragAndDrop": false,
   "eslint.autoFixOnSave": true,
+  "editor.fontFamily": "Hasklig, OpenSans, Menlo, Monaco, 'Courier New', monospace",
+  "editor.fontLigatures": true,
   "githubPullRequests.hosts": [
     {
       "host": "https://github.com",
