--- a/vscode.conf.symlink/settings.json
+++ b/vscode.conf.symlink/settings.json
@@ -12,5 +12,6 @@
   "explorer.confirmDragAndDrop": false,
   "eslint.autoFixOnSave": true,
   "editor.fontFamily": "Hasklig, OpenSans, Menlo, Monaco, 'Courier New', monospace",
-  "editor.fontLigatures": true
+  "editor.fontLigatures": true,
+  "typescript.updateImportsOnFileMove.enabled": "always"
 }
