--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,9 @@ git/gitconfig.local.symlink
 vscode.conf.symlink/workspaceStorage
 vscode.conf.symlink/globalStorage
 .gitsecret/keys/random_seed
-ssh.symlink/config
-ssh.symlink/bb
-ssh.symlink/bb.pub
-ssh.symlink/gh
-ssh.symlink/gh.pub
-ssh.symlink/known_hosts
+ssh/me.symlink/config
+ssh/me.symlink/gh
+ssh/me.symlink/gh.pub
+ssh/known_hosts
 zsh/zsh_plugins.sh
 !*.secret
