--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,7 @@ git/gitconfig.local.symlink
 vscode.conf.symlink/workspaceStorage
 vscode.conf.symlink/globalStorage
 .gitsecret/keys/random_seed
-ssh/me.symlink/config
-ssh/me.symlink/gh
-ssh/me.symlink/gh.pub
-ssh/known_hosts
+ssh/me/id_rsa
+ssh/me/id_rsa.pub
 zsh/zsh_plugins.sh
 !*.secret
