:construction: start overhaul all structure

--- a/vscode.conf.symlink/settings.json
+++ b/vscode.conf.symlink/settings.json
@@ -103,4 +103,7 @@
   "gitlens.views.fileHistory.enabled": true,
   "gitlens.views.lineHistory.enabled": true,
   "editor.fontSize": 13,
+  "go.useLanguageServer": true,
+  "go.useCodeSnippetsOnFunctionSuggest": true,
+  "go.useCodeSnippetsOnFunctionSuggestWithoutType": true,
 }
