--- a/config/alacritty.yml
+++ b/config/alacritty.yml
@@ -64,7 +64,7 @@ font:
     style: Regular Italic
 
   # Point size of the font
-  size: 12
+  size: 13
 
   # Offset is the extra space around each character. offset.y can be thought of
   # as modifying the linespacing, and offset.x as modifying the letter spacing.
@@ -90,31 +90,42 @@ debug:
 
 # Source (https://github.com/arcticicestudio/nord-alacritty/blob/develop/src/nord.yml)
 colors:
+  # Default colors
   primary:
     background: '0x2E3440'
     foreground: '0xD8DEE9'
-  cursor:
-    text: '0x2E3440'
-    cursor: '0xD8DEE9'
+
+  # Normal colors
   normal:
+    black:   '0x3B4252'
+    red:     '0xBF616A'
+    green:   '0xA3BE8C'
+    yellow:  '0xEBCB8B'
+    blue:    '0x81A1C1'
+    magenta: '0xB48EAD'
+    cyan:    '0x88C0D0'
+    white:   '0xE5E9F0'
+
+  # Bright colors
+  bright:
+    black:   '0x4C566A'
+    red:     '0xBF616A'
+    green:   '0xA3BE8C'
+    yellow:  '0xEBCB8B'
+    blue:    '0x81A1C1'
+    magenta: '0xB48EAD'
+    cyan:    '0x8FBCBB'
+    white:   '0xECEFF4'
+
+  dim:
     black: '0x3B4252'
     red: '0xBF616A'
     green: '0xA3BE8C'
-    yellow: '0xEBCB8B'
-    blue: '0x81A1C1'
-    magenta: '0xB48EAD'
-    cyan: '0x88C0D0'
-    white: '0xE5E9F0'
-  bright:
-    black: '0x4C566A'
-    red: '0xBF616A'
-    green: '0xA3BE8C'
-    yellow: '0xEBCB8B'
-    blue: '0x81A1C1'
-    magenta: '0xB48EAD'
-    cyan: '0x8FBCBB'
-    white: '0xECEFF4'
-
+    yellow: '0xEBCB14'
+    blue: '0x81A188'
+    magenta: '0xB48E99'
+    cyan: '0x88C040'
+    white: '0xE5E900'
 
 # Visual Bell
 #
