--- a/config/alacritty.yml
+++ b/config/alacritty.yml
@@ -277,6 +277,8 @@ key_bindings:
   - { key: Equals,   mods: Command, action: IncreaseFontSize             }
   - { key: Minus,    mods: Command, action: DecreaseFontSize             }
 
-  - { key: Right,    mods: Alt,     chars: "\x1bf"                       }
-  - { key: Left,     mods: Alt,     chars: "\x1bb"                       }
+  # - { key: Right,    mods: Alt,     chars: "\x1bf"                       }
+  - { key: Right,    mods: Alt,     chars: "\x1b[1;5C"                       }
+  # - { key: Left,     mods: Alt,     chars: "\x1bb"                       }
+  - { key: Left,     mods: Alt,     chars: "\x1b[15c"                       }
   - { key: Delete,   mods: Alt,     chars: "\x1bd"                       }
