tmux + new shortcuts

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -1,5 +1,12 @@
+# control key -> C-
+# meta key -> M-
+# don't use prefix -> -n
 set -g mouse on
 set -g history-limit 100000
+
+# makes word left,right jump and delete word navigation possible
+bind -n M-Left send-key M-b
+bind -n M-Right send-key M-f
 
 ##############
 ### DESIGN ###
